fix(assist): 修 4 大死穴 (NO_WRAP Base64 / 主线程切换 / 健壮 JSON / 分流呈现)